--- a/200多本把妹学电子书的读书笔记.md
+++ b/200多本把妹学电子书的读书笔记.md
@@ -2,13 +2,11 @@
 
 # 200多本把妹学电子书的读书笔记
 
-[PUA？把妹学？](## PUA？把妹学？)
-
  文章目录
 
-[1. PUA？把妹学？](https://chriszheng.science/pua/#pua%EF%BC%9F%E6%8A%8A%E5%A6%B9%E5%AD%A6%EF%BC%9F)
+[1. PUA？把妹学？](https://github.com/QianheYu/pua-books/blob/master/readme.md#pua%E6%8A%8A%E5%A6%B9%E5%AD%A6)
 
-[2. 我知道的把妹学的历史](https://chriszheng.science/pua/#%E6%88%91%E7%9F%A5%E9%81%93%E7%9A%84%E6%8A%8A%E5%A6%B9%E5%AD%A6%E7%9A%84%E5%8E%86%E5%8F%B2)
+[2. 我知道的把妹学的历史](https://github.com/QianheYu/pua-books/blob/master/readme.md#我知道的把妹学的历史)
 
 [3. 我的经历](https://chriszheng.science/pua/#%E6%88%91%E7%9A%84%E7%BB%8F%E5%8E%86)
 
